--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt": "~0.4.2",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-uglify": "~0.2.7",
-    "knockout": "~3.0.0"
+    "knockout": "~3.0.0",
+    "jasmine-node": "~1.12.0"
   }
 }
